[package]
name = "hakoniwa-cli"
version = "1.3.0"
description = "Process isolation for Linux using namespaces, resource limits, cgroups, landlock and seccomp."
keywords = ["security", "sandbox", "container", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "GPL-3.0-only"
readme = "../README.md"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.66"
env_logger = "0.11.9"
glob = "0.3.3"
log = "0.4.29"
minijinja = { version = "2.15.1", features = ["loader"] }
nix = { version = "0.29.0", features = ["user"] }
rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "1.0.2"

[dependencies.hakoniwa]
version = "1.3.0"
path = "../hakoniwa"
features = ["cgroups", "landlock", "seccomp"]

[dev-dependencies]
trycmd = "1.0.0"

[[bin]]
name = "hakoniwa"
path = "src/main.rs"
