[package]
name = "hakoniwa-cli"
version = "1.3.1"
description = "Process isolation for Linux using namespaces, resource limits, cgroups, landlock and seccomp."
keywords = ["security", "sandbox", "container", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "GPL-3.0-only"
readme = "../README.md"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.0"
env_logger = "0.11.9"
glob = "0.3.3"
log = "0.4.29"
minijinja = { version = "2.18.0", features = ["loader"] }
nix = { version = "0.29.0", features = ["user"] }
rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "1.0.7"

[dependencies.hakoniwa]
version = "1.3.1"
path = "../hakoniwa"
features = ["cgroups", "landlock", "seccomp"]

[dev-dependencies]
trycmd = "1.1.1"

[[bin]]
name = "hakoniwa"
path = "src/main.rs"
