[package]
name = "hakoniwa"
version = "1.2.4"
description = "Process isolation for Linux using namespaces, resource limits, landlock and seccomp."
keywords = ["security", "sandbox", "container", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
readme = "../README.md"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bitflags = "2.10.0"
caps = "0.5.6"
close_fds = "0.3.2"
landlock = { version = "0.4.4", optional = true }
libc = "0.2.178"
libcgroups = { version = "0.5.7", optional = true }
libseccomp = { version = "0.4.0", optional = true }
log = "0.4.29"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "ptrace", "process", "resource", "sched", "signal", "term", "user"] }
oci-spec = { version = "0.8.4", optional = true }
procfs = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
assertables = "9.8.3"
regex = "1.12.2"

[features]
default = []
cgroups = ["dep:libcgroups", "dep:oci-spec"]
landlock = ["dep:landlock"]
seccomp = ["dep:libseccomp"]

[package.metadata.docs.rs]
all-features = true
