[package]
name = "hakoniwa"
version = "1.3.0"
description = "Process isolation for Linux using namespaces, resource limits, cgroups, landlock and seccomp."
keywords = ["security", "sandbox", "container", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
readme = "../README.md"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
caps = "0.5.6"
close_fds = "0.3.2"
landlock = { version = "0.4.4", optional = true }
libc = "0.2.182"
libcgroups = { version = "0.5.7", optional = true }
libseccomp = { version = "0.4.0", optional = true }
log = "0.4.29"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "ptrace", "process", "resource", "sched", "signal", "term", "user"] }
oci-spec = { version = "0.9.0", optional = true }
postcard = { version = "1.1.3", features = ["alloc"] }
procfs = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"

[dev-dependencies]
assertables = "9.8.6"
regex = "1.12.3"

[features]
default = []
cgroups = ["dep:libcgroups", "dep:oci-spec"]
landlock = ["dep:landlock"]
seccomp = ["dep:libseccomp"]

[package.metadata.docs.rs]
all-features = true
